--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gojo-Satoru",
+  "name": "Renz-BotZ",
   "version": "2.0.0",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "bot-md",
     "multi-device"
   ],
-  "author": "NexusNw",
+  "author": "Renz",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "^4.0.1",
